# solana-token-tss

./: .gitignore  Cargo.toml  README.md  cli-reference.md  commands.txt  devnet_mpc_test.sh  manual_mpc_test.sh  mpc_demo_localnet.sh  mpc_token_test.sh  sol_manual_test.sh  sol_mpc_test.sh  test-keypair.txt
documentation/: README.md  api-reference.md  architecture.md  cli-reference.md  development-guide.md  getting-started.md  mpc-protocol.md
src/: cli.rs  error.rs  main.rs  serialization.rs  token.rs  tss.rs
