[package]
name = "solana-mpc-tokens"
version = "0.1.0"
edition = "2021"
description = "A Solana MPC signer for SPL token transfers using Musig2"

[dependencies]
clap = { version = "3", features = ["derive", "color"] }
solana-sdk = "1.18"
solana-client = "1.18"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
spl-memo = "3.0.1"
ed25519-dalek = "1"

# TSS dependencies
multi-party-eddsa = { git = "https://github.com/ZenGo-X/multi-party-eddsa", rev = "4b5e5c8d8e92f94eed38b037e0d83ad0d2a144ea" }
curv = {package = "curv-kzen", version = "0.9" }
rand07 = { package = "rand", version = "0.7" }

# Utility
bs58 = "0.5"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
solana-test-validator = "1.18"
solana-streamer = "1.18"
